# stache

./: .gitignore  .markdownlint.jsonc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc.json  AGENTS.md  Cargo.toml  LICENSE  README.md  barba.schema.json  eslint.config.ts  lint-staged.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  stache.schema.json  stylelint.config.mjs  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.agents/: architecture.md  common-tasks.md  gotchas.md  react-patterns.md  rust-patterns.md  tiling.md
.config/: nextest.toml
.github/: copilot-instructions.md
.husky/: pre-commit
app/native/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
app/native/benches/: tiling_bench.rs
app/native/binaries/: media-control-aarch64-apple-darwin
app/native/capabilities/: bar.json  default.json  widgets.json
app/native/icons/: icon.icns
app/native/proptest-regressions/tiling/layout/: proptest_tests.txt
app/native/resources/Frameworks/MediaRemoteAdapter.framework/Versions/A/: MediaRemoteAdapter
app/native/resources/lib/media-control/: MediaRemoteAdapterTestClient
app/native/src/: cache.rs  constants.rs  error.rs  events.rs  lib.rs  main.rs  schema.rs
app/native/src/audio/: device.rs  list.rs  mod.rs  priority.rs  watcher.rs
app/native/src/bar/: ipc_listener.rs  menubar.rs  mod.rs  screen.rs  window.rs
app/native/src/bar/components/: apps.rs  battery.rs  cpu.rs  hyprspace.rs  keepawake.rs  media.rs  mod.rs  tiling.rs  weather.rs
app/native/src/cli/: commands.rs  mod.rs  output.rs
app/native/src/cli/commands/: config_cmd.rs  mod.rs  tiling.rs  types.rs  wallpaper.rs
app/native/src/cmd_q/: mod.rs
app/native/src/config/: env.rs  mod.rs  template.rs  types.rs  watcher.rs
app/native/src/config/types/: bar.rs  borders.rs  command_quit.rs  gaps.rs  menu_anywhere.rs  mod.rs  notunes.rs  root.rs  tiling.rs  workspaces.rs
app/native/src/core/: events.rs
app/native/src/hotkey/: mod.rs
app/native/src/menu_anywhere/: accessibility.rs  event_monitor.rs  mod.rs
app/native/src/modules/: mod.rs
app/native/src/modules/audio/: device.rs  priority.rs  watcher.rs
app/native/src/modules/bar/: ipc_listener.rs  mod.rs  screen.rs  window.rs
app/native/src/modules/bar/components/: battery.rs  keepawake.rs  media.rs  tiling.rs  weather.rs
app/native/src/modules/cmd_q/: mod.rs
app/native/src/modules/hotkey/: caps_lock.rs  mod.rs
app/native/src/modules/menu_anywhere/: event_monitor.rs
app/native/src/modules/notunes/: mod.rs
app/native/src/modules/tiling/: borders.rs  commands.rs  init.rs  mod.rs  tabs.rs  window.rs
app/native/src/modules/tiling/actor/: handle.rs  messages.rs  minimum_size.rs  mod.rs
app/native/src/modules/tiling/actor/handlers/: app.rs  focus.rs  layout.rs  mod.rs  preset.rs  resize.rs  screen.rs  window.rs  window_move.rs  workspace.rs
app/native/src/modules/tiling/effects/: executor.rs  mod.rs  subscriber.rs  window_cache.rs  window_ops.rs
app/native/src/modules/tiling/effects/animation/: easing.rs  mod.rs  spring.rs  state.rs  sync.rs  transition.rs
app/native/src/modules/tiling/events/: app_monitor.rs  ax_observer.rs  drag_state.rs  mod.rs  mouse_monitor.rs  observer.rs  processor.rs  screen_monitor.rs  types.rs
app/native/src/modules/tiling/ffi/: accessibility.rs  mod.rs  skylight.rs  transaction.rs  window_query.rs
app/native/src/modules/tiling/layout/: dwindle.rs  floating.rs  gaps.rs  grid.rs  helpers.rs  master.rs  mod.rs  monocle.rs  split.rs
app/native/src/modules/tiling/rules/: mod.rs
app/native/src/modules/tiling/state/: mod.rs  tiling_state.rs  types.rs
app/native/src/modules/tray/: mod.rs
app/native/src/modules/wallpaper/: manager.rs  processing.rs
app/native/src/modules/widgets/: mod.rs
app/native/src/notunes/: mod.rs
app/native/src/platform/: display.rs  ipc.rs  mod.rs  path.rs  thread.rs  window.rs
app/native/src/platform/ipc/: notification.rs  socket.rs
app/native/src/tiling/: README.md  animation.rs  app_monitor.rs  constants.rs  drag_state.rs  error.rs  event_coalescer.rs  event_handlers.rs  manager.rs  mod.rs  mouse_monitor.rs  observer.rs  rules.rs  screen.rs  screen_monitor.rs  state.rs  window.rs  workspace.rs
app/native/src/tiling/borders/: janky.rs  mach_ipc.rs  manager.rs  mod.rs
app/native/src/tiling/ffi/: accessibility.rs  mod.rs
app/native/src/tiling/layout/: dwindle.rs  floating.rs  gaps.rs  grid.rs  helpers.rs  master.rs  mod.rs  monocle.rs  split.rs
app/native/src/tiling/manager/: helpers.rs  mod.rs
app/native/src/utils/: accessibility.rs  cache.rs  command.rs  ipc.rs  ipc_socket.rs  mod.rs  objc.rs  path.rs  thread.rs  window.rs
app/native/src/wallpaper/: macos.rs  manager.rs  mod.rs  processing.rs
app/native/src/widgets/: mod.rs  window.rs
app/native/src/widgets/components/: mod.rs
app/native/tests/: tiling_integration.rs
app/native/tests/fixtures/: tiling_basic.jsonc  tiling_comprehensive.jsonc  tiling_custom_gaps.jsonc  tiling_disabled.jsonc  tiling_floating.jsonc  tiling_floating_presets.jsonc  tiling_grid.jsonc  tiling_master.jsonc  tiling_monocle.jsonc  tiling_multiple_layouts.jsonc  tiling_split.jsonc  tiling_with_borders.jsonc  tiling_with_ignore.jsonc  tiling_with_rules.jsonc
app/native/tests/integration/: tiling__multi_screen.rs
app/ui/: main.css  main.tsx
docs/: architecture.md  cli.md  configuration.md  development.md  getting-started.md  index.md  sample-config.jsonc  sample.env
docs/agents/: README.md  architecture.md
docs/backlog/: animation-performance-improvements.md  tiling-wm-improvements.md  tiling-wm-plan.md  tiling-wm-requirements.md
scripts/: generate-schema.sh  prepare-sidecar.sh  release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  launch.rs  lib.rs
src-tauri/src/bar/: mod.rs  screen.rs  window.rs
src-tauri/src/bar/components/: keepawake.rs  mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/utils/: command.rs  thread.rs
(+176 files in other folders)
