[workspace]
resolver = "2"
members = ["app/native"]

[workspace.package]
version = "0.10.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/marcosmoura/barba"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(feature, values("cargo-clippy"))',
] }

[profile.release]
codegen-units = 1
debug = 1
incremental = true
lto = true
opt-level = "s"
panic = "abort"
strip = true
