[workspace]
resolver = "2"
members = ["app/native"]

[workspace.package]
version = "0.11.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/marcosmoura/stache"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(feature, values("cargo-clippy"))',
] }

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "s"
panic = "abort"
strip = true
