cargo-features = ["profile-rustflags", "trim-paths"]

[workspace]
resolver = "2"
members = ["app/native"]

[workspace.package]
version = "0.17.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/marcosmoura/stache"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(feature, values("cargo-clippy"))',
] }

[profile.dev]
incremental = true
rustflags = ["-Zthreads=8"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"]
strip = true
trim-paths = "all"
