[package]
name = "barba"
version = "0.1.0"
description = "A Tauri App"
edition = "2024"
license = "MIT"
repository = "https://github.com/marcosmoura/barba"
readme = "../README.md"
keywords = ["tauri", "desktop", "bar", "gui", "macos"]
categories = ["gui", "macos"]

[lib]
name = "barba_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["std"] }

core-foundation = { version = "0.10.1", default-features = false }
core-foundation-sys = { version = "0.8.7", default-features = false }
core-graphics = { version = "0.25.0", default-features = false }
dirs = "6.0"
image = { version = "0.25.9", default-features = false, features = [
    "jpeg",
    "png",
] }
json_comments = "0.2.2"
keepawake = "0.6"
notify = { version = "8.2.0", features = ["macos_fsevent"] }
objc = { version = "0.2.7", features = ["exception"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = [
    "std",
] }
starship-battery = { version = "0.10.3", default-features = false }
sysinfo = { version = "0.37.2", default-features = false, features = [
    "apple-app-store",
    "system",
] }
tauri = { version = "2.9.4", default-features = false, features = [
    "macos-private-api",
    "unstable",
    "wry",
] }
tauri-plugin-cli = "2.4.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.3"
tauri-plugin-single-instance = "2.3.6"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[profile.release]
debug = 1
codegen-units = 1
panic = "abort"
incremental = true

[lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(feature, values("cargo-clippy"))',
] }
