[package]
name = "barba"
version.workspace = true
description = "Barba Shell - A macOS status bar with tiling window manager integration"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["tauri", "desktop", "bar", "gui", "macos", "cli"]
categories = ["gui", "command-line-utilities"]

[lib]
name = "barba_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Single binary that serves both CLI and desktop app
[[bin]]
name = "barba"
path = "src/main.rs"

[dependencies]

# Utilities
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
# CLI dependencies
clap = { version = "4.5.54", features = ["derive", "env", "string"] }
clap_complete = "4.5.65"

# macOS native APIs
cocoa = { version = "0.26.1", default-features = false }
core-foundation = { version = "0.10.1", default-features = false }
core-foundation-sys = { version = "0.8.7", default-features = false }
core-graphics = { version = "0.25.0", default-features = false }
coreaudio-rs = { version = "0.13.0", default-features = false, features = [
    "audio_unit",
] }
dirs = "6.0"
dotenvy = "0.15.7"
image = { version = "0.25.9", default-features = false, features = [
    "jpeg",
    "png",
] }
json_comments = "0.2.2"
keepawake = "0.6"
natord = "1.0.9"
notify = { version = "8.2.0", features = ["macos_fsevent"] }
objc = { version = "0.2.7", features = ["exception"] }
objc2 = { version = "0.6.3", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSApplication",
    "NSGraphics",
    "NSRunningApplication",
    "NSScreen",
    "NSWorkspace",
] }
objc2-core-audio = { version = "0.3.2", default-features = false }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "objc2-core-foundation",
    "NSArray",
    "NSDictionary",
    "NSEnumerator",
    "NSString",
    "NSValue",
] }
parking_lot = { version = "0.12.5", default-features = false }
rand = { version = "0.9.2", default-features = false, features = [
    "std",
    "std_rng",
    "thread_rng",
] }
rayon = { version = "1.11.0", default-features = false }
regex = { version = "1.12.2", default-features = false, features = ["std"] }
schemars = { version = "1.2.0", default-features = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = [
    "std",
] }
shellexpand = { version = "3.1.1", default-features = false, features = [
    "base-0",
    "tilde",
] }
simple-easing = { version = "1.0.1", default-features = false }
smallvec = { version = "1.15.1", default-features = false }
smc = "0.2.4"
starship-battery = { version = "0.10.3", default-features = false }
sysinfo = { version = "0.37.2", default-features = false, features = [
    "system",
] }

# Tauri and plugins
tauri = { version = "2.9.5", default-features = false, features = [
    "macos-private-api",
    "unstable",
    "wry",
] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.4"
tauri-plugin-single-instance = "2.3.7"
tauri-plugin-zustand = "1.1.0"
wallpaper = "3.2"

[build-dependencies]
serde_json = "1.0.149"
tauri-build = { version = "2.5.3", features = [] }

[dev-dependencies]
tempfile = "3.24.0"

[lints]
workspace = true
