[package]
name = "stache"
version.workspace = true
description = "Stache - A macOS utility suite with status bar, automation, and desktop enhancements"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["tauri", "desktop", "bar", "gui", "macos", "cli"]
categories = ["gui", "command-line-utilities"]

[package.metadata.cargo-machete]
ignored = ["coreaudio-rs"]

[lib]
name = "stache_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Single binary that serves both CLI and desktop app
[[bin]]
name = "stache"
path = "src/main.rs"

[features]
default = []

[dependencies]

# Utilities
base64 = { version = "0.22.1", default-features = false, features = ["std"] }

# CLI dependencies
clap = { version = "4.5.60", features = ["derive", "env", "string"] }
clap_complete = "4.5.66"
colored = { version = "3.1.1", default-features = false }
core-foundation = { version = "0.10.1", default-features = false }
core-foundation-sys = { version = "0.8.7", default-features = false }
core-graphics = { version = "0.25.0", default-features = false }

# macOS native APIs
coreaudio-rs = { version = "0.14.0", default-features = false, features = [
  "audio_toolbox",
] }
dashmap = { version = "6.1", default-features = false }
dirs = "6.0"
dotenvy = "0.15.7"

# Reactive state management (tiling v2)
eyeball = { version = "0.8.8", default-features = false }
eyeball-im = { version = "0.8", default-features = false }
image = { version = "0.25.9", default-features = false, features = [
  "jpeg",
  "png",
] }
json_comments = "0.2.2"
keepawake = "0.6"
natord = "1.0.9"
notify = { version = "8.2.0", features = ["macos_fsevent"] }
objc = { version = "0.2.7", features = ["exception"] }
objc2-core-audio = { version = "0.3.2", default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
rand = { version = "0.10.0", default-features = false, features = [
  "std",
  "std_rng",
  "thread_rng",
] }
rayon = { version = "1.11.0", default-features = false }
regex = { version = "1.12.3", default-features = false, features = ["std"] }
schemars = { version = "1.2.1", default-features = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = [
  "std",
] }
shellexpand = { version = "3.1.2", default-features = false, features = [
  "base-0",
  "tilde",
] }
smallvec = { version = "1.15.1", default-features = false, features = [
  "serde",
  "const_new",
] }
smc = "0.2.4"
starship-battery = { version = "0.10.3", default-features = false }
sysinfo = { version = "0.38.0", default-features = false, features = [
  "system",
] }
tabled = { version = "0.20", default-features = false, features = [
  "std",
  "derive",
  "ansi",
] }

# Tauri and plugins
tauri = { version = "2.10.2", default-features = false, features = [
  "macos-private-api",
  "tray-icon",
  "wry",
] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-zustand = "1.2.0"
tempfile = "3.25.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", default-features = false, features = [
  "sync",
  "rt",
  "time",
  "macros",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.21.0", default-features = false, features = [
  "v7",
  "serde",
  "std",
] }
wallpaper = "3.2"

[build-dependencies]
serde_json = "1.0.149"
tauri-build = { version = "2.5.5", features = [] }

[lints]
workspace = true
